Thu Feb 14 14:05:01 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* main.c (init_args): Adjust type of third arg to remove warning from
	GCC 4.2, add cast in call to make_string.  Bleah.

Fri Jan 25 12:13:39 2008  Dave Pitts         <dpitts@cozx.com>

	* README_d/README.zos: New file.
	* Makefile.am: Add sed on y.tab.c to convert older Bison "parse error"
	messages to "syntax error" messages.
	* configure.ac: Added ZOS_USS changes.
	* m4/arch.m4: Added ZOS_USS changes.
	* m4/inttypes_h.m4: Added ZOS_USS changes.
	* m4/inttypes.m4: Added ZOS_USS changes.
	* m4/stdint_h.m4: Added ZOS_USS changes.
	* awkgram.y: Added USE_EBCDIC changes for EBCDIC collating sequence.
	* awk.h: Added ZOS_USS compile changes.
	* eval.c: Added EBCDIC casetable and ZOS_USS changes.
	* regcomp.c: Added btowc function for ZOS_USS.
	* regex.h: Changed __string to __cstring to avoid ZOS_USS header usage.
	* regex_internal.h: Added ZOS_USS changes and type defines.

Sun Jan 13 08:16:38 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* dfa.c (epsclosure): Replace MALLOC + zero-out-loop with CALLOC for
	large potential speedup, based on bug report to bug-grep list from
	Johan Walles <johan.walles@gmail.com>.
	(dfaanalyze): Made a similar change.

Fri Dec 21 11:22:16 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* profile.c (pprint): Add a missing `#ifdef PROFILING'.

Thu Dec 13 22:19:19 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* profile.c (parenthesize): Remove "!" from output string.
	(tree_eval): Fix quotes for delete array case.
	(pp_var): New function, call it as appropriate everywhere else.

Fri Nov 30 11:11:52 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* io.c (socketopen): Use NULL as first argument to `getaddrinfo'
	if any_remote_host is true. Should help on Non-GLIBC systems.

Thu Nov 15 22:01:36 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* io.c (two_way_open): Case for ptys. Change search for letters
	to avoid ASCII / EBCDIC problems.
